--- a/mern/server/config.env
+++ b/mern/server/config.env
@@ -1,2 +1,2 @@
 ATLAS_URI=mongodb+srv://kyletest:mernCS467@cluster0.gmmgs8d.mongodb.net/?retryWrites=true&w=majority
-PORT='https://jobtracker-6ksu.onrender.com/'
+PORT=10000
